# gpw_scraper

./: .gitignore  README.md  akcjonariusze_gpw.html  analyze.ipynb  fetch_company_data.py  fetch_company_urls.py  mcp_server.py  pyproject.toml  wlasnosc_gpw.html
data/: company_company.csv  company_notoria.csv  company_onp.csv  company_reports.csv  company_shareholders.csv  company_urls.csv  gpw_data.sqlite  scrape_log.csv
