[project]
name = "gpw-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
